# poc-experiments

./: .gitignore  COMMIT_CHANGES.md  DO_THIS_NOW.md  LICENSE  README.md
2026/: PoC-Multimodal-eval-framework  README.md
2026/uddalak_multimodal_ai_agent_eval/backend/: .env.example  pyproject.toml  requirements.txt  test_gemini.py
2026/uddalak_multimodal_ai_agent_eval/backend/app/: config.py  main.py
2026/uddalak_multimodal_ai_agent_eval/backend/app/adapters/: anthropic_adapter.py  base.py  gemini_adapter.py  groq_adapter.py  huggingface_adapter.py  openai_adapter.py
2026/uddalak_multimodal_ai_agent_eval/backend/app/core/: metrics.py  orchestrator.py  persistence.py  task_queue.py
2026/uddalak_multimodal_ai_agent_eval/backend/app/models/: eval_request.py  eval_response.py
2026/uddalak_multimodal_ai_agent_eval/backend/app/routers/: datasets.py  eval.py  results.py
2026/uddalak_multimodal_ai_agent_eval/backend/data/: jobs.json
2026/uddalak_multimodal_ai_agent_eval/backend/static/: eval-dashboard.html  sales-analytics-test.html
2026/uddalak_multimodal_ai_agent_eval/backend/tests/: conftest.py  test_datasets.py  test_eval.py  test_main.py
Naorem-Nganthoiba-Singh-AI-Eval/: README.md  server.py
backend/: package-lock.json
balu_api_explorer_poc/: README.md  index.html  sample-openapi.json  script.js  style.css
cli_tool/: .gitignore  README.md  package.json  tsconfig.json
data/: auth_examples.yaml  endpoint_auth_test.yaml  multi_auth_example.yaml  sample_petstore.yaml  test_bearer_auth.yaml
frontend/: README.md  index.html  script.js  style.css
(+3811 files in other folders)
